--- a/estilos.css
+++ b/estilos.css
@@ -22,6 +22,7 @@ h1
     text-align: center;
     font-size: 3rem;
     margin-top: 10px;
+    color:red;
 }
 
 main .cards-container
@@ -227,14 +228,11 @@ main .cards-container .card6 .img-container
 
 
 
-
 main .cards-container .card:hover
 {
     transform: scale(1.1);
     transition: transform 0.5s;
 }
-
-
 
 
 
